# sensor-hub-mqtt

broker/: mosquitto.conf
firmware/: .gitignore
firmware/main/: CMakeLists.txt  Kconfig.projbuild  json.c  json.h  main.c  mqtt.c  mqtt.h  wifi.c  wifi.h
server/: .air.toml  .gitignore  go.mod  main.go
web/: index.html
web/src/: App.css  App.module.css  App.tsx  index.css  main.ts  types.ts
web/src/components/: DeviceCard.module.css  DeviceCard.tsx  Masthead.module.css  Masthead.tsx  Ruler.module.css  Ruler.tsx
web/src/lib/: api.ts  format.ts  useCountUp.ts
